--- a/08TUT/views/new-page.html
+++ b/08TUT/views/new-page.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index</title>
+    <title>Document</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
-
   <body>
-    <h1>Index</h1>
+    <h1>New Page</h1>
+    <img src="img/img1.png" alt="frog" />
   </body>
 </html>
